--- a/3_urlshortener_database.yaml
+++ b/3_urlshortener_database.yaml
@@ -77,10 +77,10 @@ Resources:
 Outputs:
     
   URLshortenerdatabaseendpoint:
-    Value: GetAtt !Ref UrlShortenerRDSInstance.Endpoint.Address
+    Value: !GetAtt UrlShortenerRDSInstance.Endpoint.Address
     Export:
       Name: "URLShortener-Database-Endpoint"
   URLshortenerdatabaseport:
-    Value: GetAtt !Ref UrlShortenerRDSInstance.Endpoint.Port
+    Value: !GetAtt UrlShortenerRDSInstance.Endpoint.Port
     Export:
       Name: "URLShortener-Database-Port"         
