--- a/8_urlshortener_api_gateway_method_2.yaml
+++ b/8_urlshortener_api_gateway_method_2.yaml
@@ -43,7 +43,7 @@ Resources:
       
         IntegrationResponses:
           - StatusCode: 200
-            ResponseTemplates: {"application/json": "$input.json('$.body')"}
+            ResponseTemplates: {"application/json": ""}
       MethodResponses:
         - StatusCode: 200
           ResponseModels: { "application/json": "Empty" }
