--- a/4_urlshortener_loadbalancer.yaml
+++ b/4_urlshortener_loadbalancer.yaml
@@ -57,26 +57,6 @@ Resources:
           Value: 120
       VpcId: !Ref VPC
       
-  ListenerRule1:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - Type: redirect
-          RedirectConfig:
-            Port: '#{port}'
-            Protocol: HTTP
-            Host: 'urlshortenerlb-231306681.ap-south-1.elb.amazonaws.com'
-            Path: '/api/v1/#{path}'
-            Query: '#{query}'
-            StatusCode: HTTP_301
-
-      Conditions:
-        - Field: host-header
-          HostHeaderConfig:
-            Values:
-              - url.mayurbhagia.online
-      ListenerArn: !Ref urlshortenerlistener
-      Priority: 1
       
   urlshortenerlistener:
     Type: AWS::ElasticLoadBalancingV2::Listener
@@ -97,5 +77,9 @@ Outputs:
   TargetGroupOutput:
     Value: !Ref urlshortenertg
     Export:
-      Name: "URLShortener-TargetGroup-ARN"    
+      Name: "URLShortener-TargetGroup-ARN"
+  ListenerARN:
+    Value: !Ref urlshortenerlistener
+    Export:
+      Name: "URLShortener-Listener-ARN"
         
