--- a/8_urlshortener_api_gateway_method_2.yaml
+++ b/8_urlshortener_api_gateway_method_2.yaml
@@ -7,6 +7,8 @@ Parameters:
     Default: REGIONAL
   loadbalancerarn:
     Type: String
+    Description: Please add load balancer ARN with http://, dont forget to add http://
+    
 Resources:
   URLShortenerRESTAPIWithMessage:
     Type: AWS::ApiGateway::RestApi
