--- a/5_urlshortener_secretsmanager.yaml
+++ b/5_urlshortener_secretsmanager.yaml
@@ -28,7 +28,15 @@ Parameters:
   pinpointregisteredkeyword:
     Description: Pinpoint SMS Keyword
     Type: String
-    Default: ""   
+    Default: ""
+  pinpointentityId:
+    Description: Pinpoint Principal Entity Id
+    Type: String
+    Default: ""  
+  pinpointtemplateId:
+    Description: Pinpoint Template Id
+    Type: String
+    Default: ""             
   urlretention:
     Description: Pinpoint URL Retention in Days
     Type: String
@@ -65,7 +73,13 @@ Resources:
           - "\""          
           - ",\"urlshort.pinpointregisteredkeyword\":\""
           - !Ref pinpointregisteredkeyword
-          - "\""          
+          - "\""
+          - ",\"urlshort.pinpointentityId\":\""
+          - !Ref pinpointentityId
+          - "\""  
+          - ",\"urlshort.pinpointtemplateId\":\""
+          - !Ref pinpointtemplateId
+          - "\""           
           - ",\"urlshort.urlretention\":\""
           - !Ref urlretention
           - "\""          
